# wrath-and-glory-space-hulk-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  poetry.toml  pyproject.toml  streamlit_app.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: code_checks.yml  codeql.yml  linting.yml  release.yml  unittest.yml  workflows.yml
.streamlit/: config.toml
docs/: APP_ABOUT.md  APP_USAGE.md  TO_DO.md  USE_CASES.md
src/: __init__.py
src/app/: hulk_property_changer.py  layout_file_creator.py
src/de_brouglie/: LICENSE.txt  README.md
src/de_brouglie/docs/: index.html  toc.html  xrefmap.yml
src/de_brouglie/docs/api/: DeBroglie.Constraints.BorderConstraint.html  DeBroglie.Constraints.BorderSides.html  DeBroglie.Constraints.CountComparison.html  DeBroglie.Constraints.CountConstraint.html  DeBroglie.Constraints.EdgedPathConstraint.html  DeBroglie.Constraints.FixedTileConstraint.html  DeBroglie.Constraints.ITileConstraint.html  DeBroglie.Constraints.MaxConsecutiveConstraint.html  DeBroglie.Constraints.MirrorConstraint.html  DeBroglie.Constraints.MirrorXConstraint.html  DeBroglie.Constraints.MirrorYConstraint.html  DeBroglie.Constraints.PathConstraint.html  DeBroglie.Constraints.PathConstraintUtils.SimpleGraph.html  DeBroglie.Constraints.PathConstraintUtils.html  DeBroglie.Constraints.SeparationConstraint.html  DeBroglie.Constraints.SymmetryConstraint.html  DeBroglie.Constraints.html  DeBroglie.Models.AdjacentModel.Adjacency.html  DeBroglie.Models.AdjacentModel.html  DeBroglie.Models.GraphAdjacentModel.html  DeBroglie.Models.OverlappingModel.html  DeBroglie.Models.TileModel.html  DeBroglie.Models.html  DeBroglie.Point.html  DeBroglie.PriorityAndWeight.html  DeBroglie.Resolution.html  DeBroglie.Rot.RotatedTile.html  DeBroglie.Rot.Rotation.html  DeBroglie.Rot.RotationGroup.html  DeBroglie.Rot.TileRotation.html  DeBroglie.Rot.TileRotationBuilder.html  DeBroglie.Rot.TileRotationTreatment.html  DeBroglie.Rot.TileSymmetry.html  DeBroglie.Rot.TileSymmetryUtils.html  DeBroglie.Rot.html  DeBroglie.RotatedTile.html  DeBroglie.Tile.html  DeBroglie.TilePropagator.html  DeBroglie.TilePropagatorOptions.html  DeBroglie.TilePropagatorTileSet.html  (+32 more)
src/de_brouglie/docs/articles/: adjacency.html  animation.js  config_files.html  constraints.html  faq.html  features.html  gallery.html  index.html  quick_start_console.html  quick_start_gui.html  quick_start_lib.html  release_notes.html  rotation.html  toc.html  topologies.html
src/de_brouglie/docs/images/: rotation_example_scene.tmx  rotation_example_scene_rotated.tmx
src/de_brouglie/docs/styles/: custom.css
src/de_brouglie_layouter/tile_sets/space_hulk_game/: tile_config.json
src/generator/: errors.py  exceptions.py  indexable_enums.py  layout_engine.py  layout_graph.py  layout_graph_creator.py  map_object_size.py  positive_int_range.py  random_table.py  random_table_event.py  random_table_event_collection.py  sequenced_die.py  space_hulk.py  space_hulk_generator.py  space_hulk_layouter.py  space_hulk_tables.py
src/generator/assets/: table_hazards.json  table_occupations.json  table_origins.json  table_purposes.json  table_rooms.json
src/graphviz_layouter/: layout_graph.py
src/layouter/: i_create_layouts.py  i_layout.py  indexable_enums.py  layout_file_type.py  layouter_type.py
src/layouter/de_broglie_layouter/: __init__.py  de_broglie_layouter.py
src/layouter/de_broglie_layouter/tile_sets/space_hulk_game/: space_hulk_map.csv  tile_config.json
src/layouter/de_broglie_layouter/tile_sets/space_hulk_game/docs/: todo.md
src/layouter/de_brouglie_layouter/tile_sets/space_hulk_game/docs/: SPACE_HULK_GAME_TILE_PROBABILITIES.md
src/layouter/graphviz_layouter/: __init__.py  graphviz_edge_type.py  graphviz_engine.py  graphviz_format.py  graphviz_layouter.py  indexable_enums.py  layout_graph.py  layout_graph_creator.py
src/md2pdf/: md2pdf.py
src/wrath_and_glory_space_hulk_generator/: exceptions.py  layout_engine.py  layout_graph.py  layout_graph_creator.py  map_object_size.py  positive_int_range.py  random_table.py  random_table_event.py  random_table_event_collection.py  random_table_event_list.py  space_hulk.py  space_hulk_generator.py  space_hulk_layouter.py  space_hulk_tables.py
src/wrath_and_glory_space_hulk_generator/assets/: table_occupations.json  table_rooms.json
tests/: helpers.py  space_hulk_for_test.json  space_hulk_layout_for_test.pickle  test_app.py  test_de_broglie_layouter.py  test_graphviz_layouter.py  test_indexable_enums.py  test_json_schema_generation.py  test_layout_engine.py  test_layout_graph.py  test_map_object_size.py  test_positive_int_range.py  test_random_table.py  test_random_table_event_collection.py  test_space_hulk.py  test_space_hulk_generator.py  test_space_hulk_layouter.py  test_space_hulk_tables.py
tests/assets/: helpers.py  space_hulk_for_test.json  space_hulk_layout_for_test.pickle  space_hulk_markdown_for_test.md  streamlit_http_get_response.html
tests/de_brouglie/: sewers.json
tests/generated_graphs/: space_hulk.json  space_hulk_layout.dot
tests/generated_json_schema/: MapObjectSizeConstraint.json  RandomTable.json  SequencedDie.json  SpaceHulk.json
tiles/: tile_config.json
