[project]
name = "wrath-and-glory-space-hulk-generator"
version = "2.0.0"
description = "Generates Space Hulks based on the tables provided in the Redacted Records rulebook of Cubicle 7"
authors = [{name = "LordFckHelmchen", email = "dj_mack@gmx.de"}]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["graphviz", "rpg-tool", "streamlit", "wrathandglory", "wrath-and-glory", "space-hulk-board-game"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"Programming Language :: Python",
"Programming Language :: Python :: 3.9",
]

requires-python = "==3.9.13" # Keep in sync with ruff.target-version below
dependencies = [
    "altair==4.2.2",  # Required for streamlit to work properly
    "fpdf==1.7.2",
    "graphviz==0.20.1",
    "img2pdf==0.4.4",
    "pydantic==1.10.6",
    "PyPDF2==2.12.1",
    "streamlit==1.12.0",
]

[project.urls]
Changelog = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator/releases"
Homepage = "https://share.streamlit.io/lordfckhelmchen/wrath-and-glory-space-hulk-generator/main"
Issues = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator/issues"
Repository = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator"


[dependency-groups]
dev = [
    "fawltydeps>=0.13.3",
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
    "pytest-emoji>=0.2.0",
    "pytest-md>=0.2.0",
    "ruff==0.14.8",        # Pinned to make ruff-action work - if changed, also change in .github/workflows/code_checks.yml
    "toml==0.10.2",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 74

[tool.fawltydeps]
ignore_unused = [
    "fawltydeps",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-md",
]

[tool.ruff]
target-version = "py39" # Keep in sync with requires-python above
line-length = 120

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",   # Class attributes "shadowing" built-ins
    "ANN002", # Missing function annotation for *args
    "ANN003", # Missing function annotation for **kwargs
    "ANN10",  # No annotation for self/cls - not useful
    "ANN401", # Dynamically typed expressions are disallowed - disable by the plug-in itself
    "COM",    # All commas warnings - covered by black
    "D",      # All pydocstyle warnings
    "FIX002", # Allow TODO comments
    "G004",   # Logging statement uses f-string
    "N805",   # First argument of a method should be named self -> False-positive for pydantic validators
    "PT009",  # Use a regular `assert` instead of unittest-style `assertEqual`
    "T10",    # Debugger warnings
    "TC00",   # Don't use TYPE_CHECKING blocks - too much issues in py3.9
    "TD003",  # Allow TODO without Issue link
    "TRY003", # Avoid specifying long messages outside the exception class
    "S311",   # We have no cryptographic code - so don't check for security of random operations
    "UP045",  # TODO(djm): Switch to union operator once we update to a recent Python version
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "ANN201", # No return type check for tests
    "N802",   # Function name should be lowercase - used when expecting errors
    "PT027",  # Allow unittest assertions until we fully migrate to pytest style
    "SLF",    # Allow private member access in tests
    "S603",   # Allow untrusted subprocess input in tests
    "T201",   # Allow print output in tests
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.semantic_release]
tag_format = "{version}"
version_variables = ["pyproject.toml:version"]
