[project]
name = "wrath-and-glory-space-hulk-generator"
version = "2.2.0"
description = "Generates Space Hulks based on the tables provided in the Redacted Records rulebook of Cubicle 7"
authors = [{name = "LordFckHelmchen", email = "dj_mack@gmx.de"}]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["graphviz", "rpg-tool", "streamlit", "wrathandglory", "wrath-and-glory", "space-hulk-board-game"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"Programming Language :: Python",
"Programming Language :: Python :: 3.9",
]

requires-python = "==3.14.2" # Keep in sync with ruff.target-version below
dependencies = [
    "fpdf>=1.7.2",
    "graphviz>=0.21.0",
    "img2pdf>=0.6.3",
    "pydantic>=2.12.5",
    "PyPDF2>=3.0.1",
    "streamlit>=1.52.1",
]

[project.urls]
Changelog = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator/releases"
Homepage = "https://share.streamlit.io/lordfckhelmchen/wrath-and-glory-space-hulk-generator/main"
Issues = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator/issues"
Repository = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator"


[dependency-groups]
dev = [
    "fawltydeps>=0.13.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-emoji>=0.2.0",
    "pytest-md>=0.2.0",
    "ruff>=0.14.8",        # Pinned to make ruff-action work - if changed, also change in .github/workflows/code_checks.yml
    "toml>=0.10.2",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 74

[tool.fawltydeps]
ignore_unused = [
    "fawltydeps",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-md",
]

[tool.ruff]
target-version = "py314" # Keep in sync with requires-python above
line-length = 120

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", # Missing function annotation for *args
    "ANN003", # Missing function annotation for **kwargs
    "COM812", # Trailing comma rule - recommended to be ignored by ruff
    "D",      # pydocstyle warnings
    "FIX002", # TODO comments
    "G004",   # f-strings in logging
    "TC00",   # Don't use TYPE_CHECKING blocks - too much issues in py3.9
    "S311",   # We have no cryptographic code - so don't check for security of random operations
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "SLF",    # Private member access
    "S101",   # Bare asserts (pytest-style)
    "S603",   # Untrusted subprocess input
    "T201",   # Print output
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.semantic_release]
tag_format = "{version}"
version_variables = ["pyproject.toml:version"]
