[project]
name = "wrath-and-glory-space-hulk-generator"
version = "2.2.1"
description = "Generates Space Hulks based on the tables provided in the Redacted Records rulebook of Cubicle 7"
authors = [{name = "LordFckHelmchen", email = "dj_mack@gmx.de"}]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["graphviz", "rpg-tool", "streamlit", "wrathandglory", "wrath-and-glory", "space-hulk-board-game"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"Framework :: Pydantic",
"Programming Language :: Python",
"Programming Language :: Python :: 3.13",
]

requires-python = "~=3.13.0" # Keep in sync with ruff.target-version below & streamlit app settings!
dependencies = [
    "fpdf>=1.7.2",
    "graphviz>=0.21.0",
    "img2pdf>=0.6.3",
    "pydantic>=2.12.5",
    "PyPDF2>=3.0.1",
    "streamlit>=1.52.1",
]

[project.urls]
Changelog = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator/releases"
Homepage = "https://share.streamlit.io/lordfckhelmchen/wrath-and-glory-space-hulk-generator/main"
Issues = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator/issues"
Repository = "https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-emoji>=0.2.0",
    "pytest-md>=0.2.0",
    "toml>=0.10.2",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 74

[tool.pytest.ini_options]
addopts = "--cov"
testpaths = [
    "tests",
]

[tool.ruff]
# Via pre-commit hooks
line-length = 120
target-version = "py313" # Keep in sync with requires-python above
preview = true

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
# Top-level ignores
ignore = [
    "AIR",     # Disable all Airflow-related rules - not relevant here
    "ANN002", # Missing function annotation for *args
    "ANN003", # Missing function annotation for **kwargs
    "COM812", # Trailing comma rule - recommended to be ignored by ruff
    "CPY001", # TODO(djm): https://github.com/LordFckHelmchen/wrath-and-glory-space-hulk-generator/issues/31
    "D",      # pydocstyle warnings
    "FAST",    # Disable all FastAPI-related rules - not relevant here
    "FIX002", # TODO comments
    "G004",   # f-strings in logging
    "S311",   # We have no cryptographic code - so don't check for security of random operations
    "TC00",   # Don't use TYPE_CHECKING blocks - too much issues in py3.9
]

[tool.ruff.lint.per-file-ignores]
# Test code
"test_*.py" = [
    "PLR6301", # Don't complain about potentially static functions (used for grouping via unittest classes)
    "S101",    # Allow bare asserts in actual tests (used by Pytest)
    "S40",     # Security issues - not relevant for test code
    "S603",    # Untrusted subprocess input
    "SLF",     # Private member access
    "T201",    # Allow prints in tests
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.semantic_release]
# Via .github/workflows/release.yml
# Update uv.lock upon release
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
"""
tag_format = "{version}"
version_toml = ["pyproject.toml:project.version"]
